--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,7 +3,7 @@ $black: black;
 $grey-light: rgba($black, 0.1);
 $grey: rgba($black, 0.7);
 $grey-dark: hsl(180, 35%, 12%);
-$green: #489292;
+$green: #3d7b7b;
 $red: #9e2530;
 $violet: #6544bc;
 
@@ -13,8 +13,8 @@ $color-line: hsl(180deg, 13%, 83%);
 $color-line-inverted: rgba($white, 0.1);
 $color-accent-light: #8bc1bf;
 $color-accent: $green;
-$color-pale: rgba($black, 0.5);
-$color-pale-inverted: rgba($white, 0.5);
+$color-pale: rgba($black, 0.54);
+$color-pale-inverted: rgba($white, 0.6);
 
 $color-text-dark: $grey-dark;
 $color-text-normal: hsl(180deg, 35%, 6%);
